--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,36 @@
-version: "3.9"
+version: '3.8'
 
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     container_name: fastapi_app
     ports:
       - "8000:8000"
-    environment:
-      DATABASE_URL: mysql+pymysql://root:rootpassword@db:3306/test  # Ajout du mot de passe ici
-    depends_on:
-      - db
     volumes:
       - .:/app
-    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+    environment:
+      - DATABASE_URL=mysql+pymysql://root:root@mysql_db:3306/fastapi_db
+      - ENCRYPTION_KEY=${ENCRYPTION_KEY}
+    depends_on:
+      - mysql_db
     networks:
       - app_network
 
-  db:
+  mysql_db:
     image: mysql:8.0
     container_name: mysql_db
-    restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword  # Définir un mot de passe pour l'utilisateur root
-      MYSQL_DATABASE: test
-      MYSQL_ROOT_HOST: "%"
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=fastapi_db
     ports:
       - "3306:3306"
     volumes:
-      - db_data:/var/lib/mysql
+      - mysql_data:/var/lib/mysql
     networks:
       - app_network
 
 volumes:
-  db_data:
+  mysql_data:
 
 networks:
   app_network:
