--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,15 +10,19 @@ services:
       - .:/app
     environment:
       - DATABASE_URL=mysql+pymysql://root:root@mysql_db:3306/fastapi_db
+      - SECOND_DATABASE_URL=mysql+pymysql://root:root@mysql_db:3306/faker_db
       - ENCRYPTION_KEY=${ENCRYPTION_KEY}
     depends_on:
-      - mysql_db
+      mysql_db:
+        condition: service_healthy
+    restart: always
     networks:
       - app_network
 
   mysql_db:
     image: mysql:8.0
     container_name: mysql_db
+    command: --default-authentication-plugin=mysql_native_password
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=fastapi_db
@@ -26,6 +30,14 @@ services:
       - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-proot"]
+      interval: 5s
+      timeout: 5s
+      retries: 20
+      start_period: 10s
+    restart: always
     networks:
       - app_network
 
