--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,6 @@ pymysql
 requests
 faker
 email-validator==2.1.0
+prometheus-client==0.19.0
+prometheus-fastapi-instrumentator==6.1.0
+starlette-exporter==0.17.1
