Rajout enregistrement du model

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,16 @@
-data/
-benchmark_results/
-logs/
+saved_models/
 mlartifacts/
 mlruns/
-runs/
+logs/
+confusion_analysis/
+benchmark_results/
 __pycache__/
-*.py[cod]
-*$py.class
-
-
-
-venv/
-
-env/
-.env/
-
-.vscode/
-.idea/
+data/
+runs/
+run_logs/
+*.pyc
+*.pyo
+*.pyd
+*.pyw
+*.pyz
+*.pywz
