--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,36 +2,34 @@ version: '3.8'
 
 services:
   api:
-    build: 
-      context: .
-      dockerfile: Dockerfile
+    build: .
     ports:
       - "8000:8000"
+      - "5000:5000"
     volumes:
-      - type: bind
-        source: ./api-test-endpoint
-        target: /app/api-test-endpoint
-      - type: bind
-        source: ./saved_models
-        target: /app/models
-        read_only: true
-      - type: bind
-        source: ./data
-        target: /app/data
-        read_only: true
-      - type: bind
-        source: ./evaluation_results
-        target: /app/evaluation_results
+      - ./saved_models:/app/saved_models
+      - ./data:/app/data
+      - ./evaluation_results:/app/evaluation_results
+      - ./api-test-endpoint:/app/api-test-endpoint
+      - ./mlruns:/app/mlruns
+      - ./artifacts:/app/artifacts
+      - ./image-test-apprentissage:/app/image-test-apprentissage
     environment:
       - CUDA_VISIBLE_DEVICES=0
       - SECRET_KEY=${SECRET_KEY}
-      - MODEL_PATH=/app/models/20250221_132302/ResNet-50_acc78.61_20250221_132302.pth
+      - MODEL_PATH=/app/saved_models/20250221_132302/ResNet-50_acc78.61_20250221_132302.pth
       # Configuration des utilisateurs initiaux
       - ADMIN_USERNAME=${ADMIN_USERNAME}
       - ADMIN_PASSWORD=${ADMIN_PASSWORD}
       - CREATE_DEFAULT_USER=${CREATE_DEFAULT_USER}
       - DEFAULT_USERNAME=${DEFAULT_USERNAME}
       - DEFAULT_PASSWORD=${DEFAULT_PASSWORD}
+      # Configuration MLflow
+      - MLFLOW_TRACKING_URI=http://0.0.0.0:5000
+      - MLFLOW_TRACKING_USERNAME=admin
+      - MLFLOW_TRACKING_PASSWORD=password
+      - MLFLOW_SERVE_ARTIFACTS=true
+      - MLFLOW_ARTIFACT_ROOT=/app/artifacts
     deploy:
       resources:
         reservations:
@@ -39,6 +37,7 @@ services:
             - driver: nvidia
               count: all
               capabilities: [gpu]
+    command: ./entrypoint.sh
 
 volumes:
   model-data: 
